@@ -109,6 +109,7 @@
 	<script>commands.events</script>
 	<script>commands.export</script>
 	<script>commands.fix</script>
+	<script>commands.follow</script>
 	<script>commands.freeze</script>
 	<script>commands.go</script>
 	<script>commands.import</script>
